# heat-mitigation-suggestion

./: .gitignore  LICENSE  Makefile  README.md  init.py  pyproject.toml
notebooks/: heat_mitigation_pipeline.ipynb
src/heatmit/: __init__.py  __main__.py  mitigate.py  rag_lm.py  suggest.py  super_resolution.py  vl_processing.py
tests/: test_base.py
