[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# required if project and package name differ
[tool.hatch.build.targets.wheel]
packages = ["src/heatmit"]

[project]
name = "heat-mitigation-suggestion"
authors = [{name = "Lorenzo Innocenti", email = "lorenzo.innocenti@polito.it"}]
description = " "
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

# Dynamic metadata allow to assign the version number to the package at build time.
# The location of the version number is specified in the [tool.hatch.version] section.
dynamic = ["version"]
dependencies = [
    "accelerate>=1.13.0",
    "beautifulsoup4>=4.14.3",
    "numpy>=2.2.6",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "qwen-vl-utils>=0.0.14",
    "rasterio>=1.4.4",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=5.7.0",
    "matplotlib>=3.10.9",
    "opensr-model>=1.0.8",
    "omegaconf>=2.3.0",
    "sen2sr>=0.8.5",
    "mlstac>=0.4.5",
    "cubo",
    "pypdf>=6.11.0",
]

# Optional dependencies, use this to include everything that the project needs to run in development.
# These can be installed by specifying for instance `uv sync --extra dev` o 'uv sync --all-extras'.
# Here the loose versioning policy is usually preferred.
[project.optional-dependencies]
# Add development dependencies here
dev = [
    "gitchangelog >= 3.0.4, < 4.0.0",
    "ruff >= 0.5.0, < 1.0",
]
# Add documentation dependencies here
docs = [
    "mkdocs-material >= 9.5.0, < 10",
    "mdx-include >= 1.4.0, < 2",
]
# Add testing dependencies here
test = [
    "coverage >= 7.6.0, < 8",
    "pytest >= 8.3.0, < 9",
    "pytest-cov >= 5.0.0, < 6.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
cubo = { git = "https://github.com/ESDS-Leipzig/cubo.git" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/heatmit/version.py"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "UP"]
